inspector highlight of SVG root element with viewbox does not match dimensions of element https://bugs.webkit.org/show_bug.cgi?id=78037

Patch by Max Vujovic <mvujovic@adobe.com> on 2012-03-19
Reviewed by Nikolas Zimmermann.

Source/WebCore:

Functions such as RenderBox::absoluteQuads and DOMNodeHighlighter::getOrDrawNodeHighlight
eventually call RenderSVGRoot::mapLocalToContainer, passing along local CSS box coordinates.

However, before this patch, RenderSVGRoot::mapLocalToContainer expected local SVG viewport
coordinates. This caused the inspector highlight to be incorrectly sized and positioned.

Now, RenderSVGRoot::mapLocalToContainer expects local CSS box coordinates, like other HTML
renderers.

Test: inspector/elements/highlight-svg-root.html

* dom/Element.cpp:
(WebCore::Element::getBoundingClientRect):
    Now, the SVG root element can use the code path for elements with CSS boxes to calculate
    its bounding client rect.

* rendering/svg/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::mapLocalToContainer):
    RenderSVGRoot::mapLocalToContainer no longer needs to apply the
    localToBorderBoxTransform to convert from local SVG viewport coordinates to local CSS
    box coordinates. Now, it receives local CSS box coordinates.

* rendering/svg/RenderSVGRoot.h:
(WebCore::RenderSVGRoot::localToBorderBoxTransform):
    RenderSVGRoot::localToBorderBoxTransform has been exposed for child elements in the SVG
    namespace to use when mapping from local SVG viewport coordinates to local CSS box
    coordinates.

(RenderSVGRoot):
* rendering/svg/SVGRenderSupport.cpp:
(WebCore::SVGRenderSupport::mapLocalToContainer):
    Elements in the SVG namespace should now apply the localToBorderBoxTransform at the
    SVG/HTML boundary (aka RenderSVGRoot) when mapping their coordinates up the render tree.

* svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::localCoordinateSpaceTransform):
    Same as above. This method is eventually used in the SVGLocatable::getScreenCTM
    calculation.

LayoutTests:

* inspector/elements/highlight-svg-root-expected.txt: Added.
* inspector/elements/highlight-svg-root.html: Added.

Canonical link: https://commits.webkit.org/98720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111176 268f45cc-cd09-0410-ab3c-d52691b4dbfc